tests/NormalTests/paczka1/small_fuzzy/68954221.err
Error in line 3: aEgD662I A685 51,3
Error in line 2: 6tSETOSWm S459 56,2
